<resources>
  <string name="app_name">MAD Kiosk</string>
  <string name="app_name_short">MAD Kiosk</string>
  <string name="app_description">Mobile Check-in for Travellers</string>

  <string name="login_title">Log-in to Your Tipi account …</string>
  <string name="email">Email</string>
  <string name="password">password</string>
  <string name="login">Login</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_incorrect_password">This password is too short!</string>
  <string name="error_field_required">This field is required</string>
  <string name="error_conflict_email">This booking email is used already!</string>
  <string name="reset">Reset</string>
  <string name="smile">Smile!</string>

  <string name="full_name">Full Name</string>
  <string name="booking_email">Booking Email</string>
  <string name="home_town">Your City / Country</string>
  <string name="birthday">Birthday</string>
  <string name="passport_number">Passport Number</string>
  <string name="continue_text">Continue</string>
  <string name="reference_code">Booking Reference (optional)</string>
  <string name="birthday_error">You haven\'t born yet?!!</string>
  <string name="birthday_error_old">You are too old to travel, Sorry!!!</string>
  <string name="choose_another_photo_text">Picture wasn\'t taken!</string>
  <string name="check_in">Check-in</string>
  <string name="check_out">Check-out</string>
  <string name="submit">Submit</string>
  <string name="error_less_than_today">Check-in date must be after today</string>
  <string name="error_check_out_before_check_in">Check-out must be after check-in</string>
  <string name="back">Back</string>
  <string name="start_over">Start Over</string>
  <string name="success">Success!</string>
  <string name="success_description">You just checked-in like da boss man…</string>
  <string name="already_user">Already a Tipi Traveller?</string>
  <string name="log_in">log-in</string>
  <string name="scan_passport">Scan Passport</string>
  <string name="number_of_nights">Number of Nights</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="find">Find</string>
  <string name="find_account_title">Find Your Account</string>
  <string name="find_account_hint">Enter Tipi email to find\n your account</string>
  <string name="match_found_hint">Found a match</string>
  <string name="no_match_hint">No Matches Found</string>
  <string name="or">OR</string>
  <string name="sign_up">Sign up</string>
  <string name="dialog_me_text">This is Me</string>
  <string name="dialog_not_me_text">Not Me</string>


  <!-- Tracker Screen Names -->
  <string name="hostel_login"> Hostel Login</string>
  <string name="guest_landing">Guest Landing</string>
  <string name="overal_time">Success Overall Timing</string>
  <string name="forget_password_text">Forget your Password?</string>
  <string name="reset_button_text">Reset Here</string>

  <string name="font_light">SF-UI-Text-Light.otf</string>
  <string name="font_medium">SF-UI-Text-Medium.otf</string>
  <string name="font_regular">SF-UI-Text-Regular.otf</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="tipi_description_text">Powered by Tipi - Mobile check-in for Travellers</string>
  <string name="tipi_check_in">Tipi Check-in</string>
  <string name="fill_details_text">Fill in your details to check-in</string>
  <string name="checked_in_text">Have you checked-in on Tipi before?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="title_activity_setting">Settings</string>
  <string name="start_check_in">Start Check-in</string>
  <string name="download">Download Update</string>
  <string name="send_log">Send log</string>
  <string name="logout">Logout</string>
  <string name="check_in_details">Check-in Details</string>
  <string name="next">Next</string>
  <string name="email_hint">TIPI EMAIL</string>
  <string name="create_account">Create Account</string>
  <string name="no_account_text">NO ACCOUNT?</string>
  <string name="try_again_text">TRY AGAIN?</string>
  <string name="take_selfie_hint">Tap the camera icon to\n take a selfie</string>
  <string name="avatar_fail_titel">Oops… Try Again</string>
  <string name="avatar_success_title">Nice!</string>
  <string name="avatar_success_hint">Change your pic anytime\n in Tipi mobile app</string>
  <string name="take_scan_hint">Tap the camera icon to\n scan passport</string>
  <string name="hand_back">Please hand back to the staff.</string>
  <string name="meet_text">Meet other travellers at %s.\n Download Tipi Today!</string>
  <string name="scan_success_title">Review Passport</string>
  <string name="error_check_out_more_than_one_year">Check-out date should not be more than a year</string>
  <string name="error_invalid_full_name">This name is invalid</string>
  <string name="agree">agree</string>
  <string name="terms"><![CDATA[Terms & Conditions]]></string>
  <string name="about_you">Tell us about you</string>
  <string name="next_travel">Where are you travelling next?</string>
  <string name="previous_travel">Which country you have just come from?</string>
  <string name="how_long">How long you are staying in the country</string>
  <string name="visit_farser">Are you visiting Fraser island?</string>
  <string name="need_job">Are you looking for a job?</string>
  <string name="home_town_error">Please choose your City/Country from drop down list</string>
  <string name="tap_to_check_in">tap to check-in</string>
  <string name="setting">Settings</string>
  <string name="your_details">Your Details</string>
  <string name="booking_info">Booking Info</string>
  <string name="take_a_selfie">Take a Selfie!</string>
  <string name="camera">Camera</string>
  <string name="scan_your_passport_or_drivers_license">Use Back Camera to Take Photo of your Passport or Driver\'s License</string>
  <string name="scan">Scan</string>
  <string name="retry">Retry</string>
  <string name="thanks_for_checking_in_on_tipi">Thanks for checking-in on Tipi</string>
  <string name="next_check_in">Next Check-in</string>
  <string name="enter_your_tipi_email">Enter your Tipi email …</string>
  <string name="which_city_are_you_from">Which city are you from?</string>
  <string name="gender">Gender</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="error_invalid_name_count">Enter your first and last name</string>
  <string name="enter_your_email">Enter your email …</string>
  <string name="verify_your_id">Verify your ID</string>
  <string name="do_you_have_your_passport">Do you have your Passport</string>
  <string name="take_a_picture">Not working? Take a picture…</string>
  <string name="use_back_camera_to_scan_passport">Use back camera with passport inside white guide to scan</string>
  <string name="use_back_camera_to_take_a_picture_of_your_license">Use back camera to take a picture of your license</string>
  <string name="license_no">License No</string>
  <string name="passport_no">Passport No</string>
  <string name="enter_details">Enter your details</string>
  <string name="no_connection">Please check the WI-FI connection!</string>
  <string name="something_wrong_try_again">Sorry something went wrong, please try again!</string>
  <string name="enter_correct_email_password">Please enter correct email and password!</string>
  <string name="no_terms"><![CDATA[Sorry this hostel\'s Terms & Condition isn\'t available!]]></string>
  <string name="ask_staff_login">Please ask one of the staff to log this tablet in again!</string>
  <string name="check_from_date">Please check your check-in date again and retry!</string>
  <string name="log_email_subject">Log file</string>
  <string name="log_email_text">Log File attached</string>
  <string name="log_email_to">ashkan.hesaraki@gmail.com</string>
  <string name="do_you_want_to_learn_how_to_surf">Do you want to learn how to surf?</string>
  <string name="your_country">Your Country</string>
  <string name="exit_the_app">Exit the App</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="printer_on">Printer is ON</string>
  <string name="printer_off">Printer is OFF</string>
  <string name="printer_error_snackbar">Please ask staff to help you</string>
  <string name="go_to_reception">Go to reception for check-in</string>
</resources>
