<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/main_frame"
    android:layout_height="@dimen/main_frame_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="false"
    tools:context="me.tipi.self_check_in.ui.fragments.LoginFragment">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/first_key_line">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="@dimen/second_key_line"
        android:gravity="center"
        android:text="@string/app_name_short"
        android:textColor="@color/main_text"
        android:textSize="@dimen/font_large"/>


    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/main_text"
        android:textSize="@dimen/font_normal"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/hintText"
        android:layout_below="@+id/sub_title">

      <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/normal_margin"
          android:hint="@string/email"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress"
          android:textColor="@color/main_text"
          android:textSize="@dimen/font_normal"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/hintText"
        android:layout_below="@+id/email_input_layout">
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/main_text"
        android:textSize="@dimen/font_normal"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/submit_button_background"
        android:padding="@dimen/normal_padding"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/font_normal"/>
  </RelativeLayout>
</android.support.v7.widget.CardView>
