<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/second_key_line"
    android:paddingRight="@dimen/second_key_line"
    tools:context="me.tipi.self_check_in.ui.fragments.FindUserFragment"
    tools:ignore="ContentDescription">

  <TextView
      android:id="@+id/find_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/second_key_line"
      android:gravity="center"
      android:text="@string/find_account_title"
      android:textColor="@color/main_text"
      android:textSize="@dimen/font_large"/>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/email_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/find_title"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/second_key_line"
      app:hintTextAppearance="@style/hintText">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"/>
  </android.support.design.widget.TextInputLayout>

  <TextView
      android:id="@+id/match_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/email_input_layout"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/first_key_line"
      android:gravity="center"
      android:text="@string/find_account_hint"
      android:textColor="@color/main_text"
      android:textSize="@dimen/font_normal"/>

  <TextView
      android:id="@+id/try_again"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/find_btn"
      android:padding="@dimen/normal_padding"
      android:text="@string/try_again_text"
      android:textSize="@dimen/font_small"
      android:visibility="gone"/>

  <Button
      android:id="@+id/find_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="@dimen/first_key_line"
      android:background="@drawable/submit_button_background"
      android:text="@string/find"
      android:textColor="@color/white"
      android:textSize="@dimen/font_normal"/>

  <RelativeLayout
      android:id="@+id/match_user_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/match_text"
      android:visibility="gone">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar_placeholder"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/avatar"
        android:layout_toRightOf="@+id/avatar"
        android:gravity="center"
        android:padding="@dimen/normal_padding"
        android:textColor="@color/black"
        android:textSize="@dimen/font_normal"
        tools:text="Jack Bowcott"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_right_36dp"/>
  </RelativeLayout>

  <TextView
      android:id="@+id/no_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_above="@+id/sign_up_btn"
      android:padding="@dimen/normal_padding"
      android:text="@string/no_account_text"
      android:textSize="@dimen/font_small"
      android:visibility="gone"/>

  <Button
      android:id="@+id/sign_up_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_above="@+id/find_btn"
      android:layout_marginBottom="@dimen/third_key_line"
      android:background="@drawable/submit_button_green_background"
      android:onClick="goToSignUp"
      android:text="@string/create_account"
      android:textColor="@color/white"
      android:textSize="@dimen/font_normal"
      android:visibility="gone"
      />

</RelativeLayout>
