<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/second_key_line"
    android:paddingRight="@dimen/second_key_line"
    tools:context="me.tipi.self_check_in.ui.fragments.IdentityFragment"
    tools:ignore="ContentDescription">

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="@dimen/second_key_line"
      android:text="@string/check_in_details"
      android:textColor="@color/main_text"
      android:textSize="@dimen/font_large"/>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/name_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/title"
      android:layout_marginTop="@dimen/second_key_line"
      app:hintTextAppearance="@style/hintText">

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/full_name"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"/>
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:id="@+id/email_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/name_input_layout"
      android:layout_marginTop="@dimen/normal_margin"
      app:hintTextAppearance="@style/hintText">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"/>
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:id="@+id/hometown_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/email_input_layout"
      android:layout_marginTop="@dimen/normal_margin"
      app:hintTextAppearance="@style/hintText">

    <AutoCompleteTextView
        android:id="@+id/home_town"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/home_town"
        android:imeActionId="@+id/next"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/birthday_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/hometown_input_layout"
      android:layout_marginTop="@dimen/normal_margin"
      app:hintTextAppearance="@style/hintText">

    <EditText
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/birthday"
        android:imeOptions="actionNext"
        android:inputType="none"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"/>
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/continue_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="@dimen/first_key_line"
      android:background="@drawable/submit_button_background"
      android:text="@string/next"
      android:textColor="@color/white"
      android:textSize="@dimen/font_normal"/>

</RelativeLayout>
